--- a/izpack-api/pom.xml
+++ b/izpack-api/pom.xml
@@ -41,6 +41,28 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!--generate classes from xsd-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>jaxb generation</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <schemaDirectory>${basedir}/src/main/resources/org/izpack/xsd/</schemaDirectory>
+                            <bindingDirectory>${basedir}/src/main/resources/org/izpack/xsd/</bindingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
             <id>run-xvfb</id>
